--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "kafka>=1.3.5",
     "mysqlclient==2.2.7",
     "oracledb==3.4.0",
+    "pandas>=2.3.3",
     "psycopg2-binary==2.9.11",
     "pymysql==1.1.2",
     "python-dotenv==1.2.1",
