Replication works properly.

--- a/.env.docker
+++ b/.env.docker
@@ -65,3 +65,5 @@ KAFKA_TOPIC_COMPRESSION_TYPE=snappy
 
 # Minimum in-sync replicas (default: 1)
 KAFKA_TOPIC_MIN_ISR=1
+
+CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
