--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "avro==1.12.0",
     "celery>=5.5.3",
     "confluent-kafka>=2.12.1",
     "cookiecutter>=2.6.0",
