--- a/debezium-setup/docker-compose.yaml
+++ b/debezium-setup/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - --default-authentication-plugin=mysql_native_password
       - --bind-address=0.0.0.0
       - --max-connections=500
+      - --gtid-mode=ON
+      - --enforce-gtid-consistency=ON
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: client
