--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "oracledb==3.4.0",
     "pandas>=2.3.3",
     "psycopg2-binary==2.9.11",
+    "pymssql>=2.3.10",
     "pymysql==1.1.2",
+    "pyodbc>=5.3.0",
     "python-dotenv==1.2.1",
     "redis>=7.0.1",
     "sqlalchemy==2.0.44",
