--- a/debezium-setup/docker-compose.yaml
+++ b/debezium-setup/docker-compose.yaml
@@ -25,7 +25,6 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      # OPTION A: Use Docker volume (recommended)
       - mysql-data:/var/lib/mysql
     networks:
       - replication-network
@@ -37,7 +36,7 @@ services:
     restart: unless-stopped
 
   # ============================================
-  # Redis
+  # Redis - WITH FIXES FOR CELERY IDLE ISSUES
   # ============================================
   redis:
     image: redis:7-alpine
@@ -49,7 +48,8 @@ services:
       - redis-data:/data
     networks:
       - replication-network
-    command: redis-server --appendonly yes --bind 0.0.0.0
+    # Change this line:
+    command: redis-server --appendonly yes --bind 0.0.0.0 --protected-mode no
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -58,79 +58,130 @@ services:
     restart: unless-stopped
 
   # ============================================
-  # Kafka (Confluent KRaft mode)
+  # Kafka Broker 1 (KRaft mode)
   # ============================================
-  kafka:
+  kafka-1:
     image: confluentinc/cp-kafka:7.5.0
-    container_name: kafka
-    hostname: kafka
+    container_name: kafka-1
+    hostname: kafka-1
     ports:
       - "9092:9092"
-      - "9093:9093"
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: "broker,controller"
-      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
-      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-      KAFKA_LISTENERS: >-
-        PLAINTEXT://kafka:29092,
-        PLAINTEXT_HOST://0.0.0.0:9092,
-        CONTROLLER://kafka:9093
-      KAFKA_ADVERTISED_LISTENERS: >-
-        PLAINTEXT://kafka:29092,
-        PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: >-
-        CONTROLLER:PLAINTEXT,
-        PLAINTEXT:PLAINTEXT,
-        PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093"
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENERS: "PLAINTEXT://kafka-1:29092,PLAINTEXT_HOST://0.0.0.0:9092,CONTROLLER://kafka-1:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka-1:29092,PLAINTEXT_HOST://localhost:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-
-      # Internal topics
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-
-      # Auto-create topics for dev
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-
-      KAFKA_NUM_NETWORK_THREADS: 8
-      KAFKA_NUM_IO_THREADS: 8
-      KAFKA_SOCKET_SEND_BUFFER_BYTES: 1048576
-      KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 1048576
-      KAFKA_SOCKET_REQUEST_MAX_BYTES: 104857600
-
-     # Increase batch sizes for better throughput
-      KAFKA_REPLICA_FETCH_MAX_BYTES: 10485760
-      KAFKA_MESSAGE_MAX_BYTES: 10485760
-
-      KAFKA_COMPRESSION_TYPE: "lz4"
-      
-      # Log retention (keep snapshots for debugging)
-      KAFKA_LOG_RETENTION_HOURS: 168
-      KAFKA_LOG_SEGMENT_BYTES: 1073741824
-
-      # Logging
-      KAFKA_LOG4J_ROOT_LOGLEVEL: WARN
-      KAFKA_TOOLS_LOG4J_LOGLEVEL: ERROR
-
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
       CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
-
     volumes:
-      - kafka-data:/var/lib/kafka/data
+      - kafka1-data:/var/lib/kafka/data
     networks:
       - replication-network
     healthcheck:
-      test: ["CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1"]
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
       interval: 10s
       timeout: 10s
       retries: 10
+      start_period: 30s
     restart: unless-stopped
-
     command: >
       bash -c "
       if [ ! -f /var/lib/kafka/data/meta.properties ]; then
-        kafka-storage format -t \${CLUSTER_ID} -c /etc/kafka/kafka.properties;
+        kafka-storage format -t MkU3OEVBNTcwNTJENDM2Qk -c /etc/kafka/kafka.properties;
+      fi;
+      /etc/confluent/docker/run
+      "
+
+  # ============================================
+  # Kafka Broker 2 (KRaft mode)
+  # ============================================
+  kafka-2:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka-2
+    hostname: kafka-2
+    ports:
+      - "9094:9092"
+    environment:
+      KAFKA_NODE_ID: 2
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093"
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENERS: "PLAINTEXT://kafka-2:29092,PLAINTEXT_HOST://0.0.0.0:9092,CONTROLLER://kafka-2:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka-2:29092,PLAINTEXT_HOST://localhost:9094"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+    volumes:
+      - kafka2-data:/var/lib/kafka/data
+    networks:
+      - replication-network
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
+    restart: unless-stopped
+    command: >
+      bash -c "
+      if [ ! -f /var/lib/kafka/data/meta.properties ]; then
+        kafka-storage format -t MkU3OEVBNTcwNTJENDM2Qk -c /etc/kafka/kafka.properties;
+      fi;
+      /etc/confluent/docker/run
+      "
+
+  # ============================================
+  # Kafka Broker 3 (KRaft mode)
+  # ============================================
+  kafka-3:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka-3
+    hostname: kafka-3
+    ports:
+      - "9096:9092"
+    environment:
+      KAFKA_NODE_ID: 3
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093"
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENERS: "PLAINTEXT://kafka-3:29092,PLAINTEXT_HOST://0.0.0.0:9092,CONTROLLER://kafka-3:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka-3:29092,PLAINTEXT_HOST://localhost:9096"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+    volumes:
+      - kafka3-data:/var/lib/kafka/data
+    networks:
+      - replication-network
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
+    restart: unless-stopped
+    command: >
+      bash -c "
+      if [ ! -f /var/lib/kafka/data/meta.properties ]; then
+        kafka-storage format -t MkU3OEVBNTcwNTJENDM2Qk -c /etc/kafka/kafka.properties;
       fi;
       /etc/confluent/docker/run
       "
@@ -142,13 +193,17 @@ services:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     depends_on:
-      kafka:
+      kafka-1:
+        condition: service_healthy
+      kafka-2:
+        condition: service_healthy
+      kafka-3:
         condition: service_healthy
     ports:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local-cluster
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-1:29092,kafka-2:29092,kafka-3:29092
       DYNAMIC_CONFIG_ENABLED: 'true'
     networks:
       - replication-network
@@ -162,13 +217,17 @@ services:
     container_name: schema-registry
     hostname: schema-registry
     depends_on:
-      kafka:
+      kafka-1:
+        condition: service_healthy
+      kafka-2:
+        condition: service_healthy
+      kafka-3:
         condition: service_healthy
     ports:
       - "8081:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:29092
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka-1:29092,kafka-2:29092,kafka-3:29092
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: WARN
     networks:
@@ -190,7 +249,11 @@ services:
     image: kafka-connect-debezium:latest
     container_name: kafka-connect
     depends_on:
-      kafka:
+      kafka-1:
+        condition: service_healthy
+      kafka-2:
+        condition: service_healthy
+      kafka-3:
         condition: service_healthy
       schema-registry:
         condition: service_healthy
@@ -199,46 +262,29 @@ services:
     ports:
       - "8083:8083"
     environment:
-      # Debezium uses different env var names (no CONNECT_ prefix for some)
-      BOOTSTRAP_SERVERS: kafka:29092
+      BOOTSTRAP_SERVERS: kafka-1:29092,kafka-2:29092,kafka-3:29092
       GROUP_ID: connect-cluster
-
       CONFIG_STORAGE_TOPIC: connect-configs
       OFFSET_STORAGE_TOPIC: connect-offsets
       STATUS_STORAGE_TOPIC: connect-statuses
-
-      CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      OFFSET_STORAGE_REPLICATION_FACTOR: 1
-      STATUS_STORAGE_REPLICATION_FACTOR: 1
-
-      # Avro Converter Configuration
+      CONFIG_STORAGE_REPLICATION_FACTOR: 3
+      OFFSET_STORAGE_REPLICATION_FACTOR: 3
+      STATUS_STORAGE_REPLICATION_FACTOR: 3
       KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
       VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
       CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-
-      # Internal converters
       INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-
-      # PERFORMANCE TUNING for initial snapshots
-      # Increase task thread pool for parallel processing
       CONNECT_TASK_SHUTDOWN_GRACEFUL_TIMEOUT_MS: 30000
-      
-      # Producer settings (Kafka Connect -> Kafka)
       CONNECT_PRODUCER_BATCH_SIZE: 32768
       CONNECT_PRODUCER_LINGER_MS: 10
       CONNECT_PRODUCER_BUFFER_MEMORY: 67108864
       CONNECT_PRODUCER_MAX_REQUEST_SIZE: 10485760
       CONNECT_PRODUCER_COMPRESSION_TYPE: lz4
-      
-      # Consumer settings (for offset management)
       CONNECT_CONSUMER_MAX_POLL_RECORDS: 1000
       CONNECT_CONSUMER_FETCH_MIN_BYTES: 1048576
-      
-      # JVM heap size for better performance
       KAFKA_HEAP_OPTS: "-Xms2G -Xmx2G"
-
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8083/"]
       interval: 10s
@@ -263,7 +309,11 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      kafka:
+      kafka-1:
+        condition: service_healthy
+      kafka-2:
+        condition: service_healthy
+      kafka-3:
         condition: service_healthy
     ports:
       - "8000:8000"
@@ -287,7 +337,7 @@ services:
     restart: unless-stopped
 
   # ============================================
-  # Celery Worker - Main Queue
+  # Celery Worker - Main Queue (celery queue)
   # ============================================
   celery-worker:
     build:
@@ -298,24 +348,60 @@ services:
     depends_on:
       - django
       - redis
-      - kafka
+      - kafka-1
+      - kafka-2
+      - kafka-3
     environment:
       - DJANGO_SETTINGS_MODULE=jovoclient.settings
+      - HOSTNAME=celery-worker
+      # Redis connection settings to prevent idle timeouts
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      # Visibility timeout must be longer than longest task
+      - CELERY_VISIBILITY_TIMEOUT=43200
+      - CELERY_SOCKET_TIMEOUT=120
+      - CELERY_SOCKET_CONNECT_TIMEOUT=30
+      - CELERY_HEALTH_CHECK_INTERVAL=30
+      # Task time limits
+      - CELERY_TASK_TIME_LIMIT=3600
+      - CELERY_TASK_SOFT_TIME_LIMIT=3300
+      # Worker settings
+      - CELERY_WORKER_PREFETCH_MULTIPLIER=1
+      - CELERY_WORKER_MAX_TASKS_PER_CHILD=1000
+      - CELERY_TASK_ACKS_LATE=True
+      - CELERY_TASK_REJECT_ON_WORKER_LOST=True
     env_file:
       - ../.env.docker
     volumes:
       - ..:/app
     networks:
       - replication-network
-    command: celery -A jovoclient worker -l info -Q celery 
-      --concurrency=4 -n worker@%h 
-      --max-tasks-per-child=1000 
-      --time-limit=3600 
-      --soft-time-limit=3300
+    command: 
+      - celery
+      - -A
+      - jovoclient
+      - worker
+      - -l
+      - info
+      - -Q
+      - celery
+      - --concurrency=4
+      - -n
+      - worker@%h
+      - --max-tasks-per-child=1000
+      - --prefetch-multiplier=1
+      - --time-limit=3600
+      - --soft-time-limit=3300
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A jovoclient inspect ping -d worker@celery-worker || exit 1"]
+      interval: 60s
+      timeout: 30s
+      retries: 3
+      start_period: 30s
     restart: unless-stopped
 
   # ============================================
-  # Celery Worker - Consumer Queue
+  # Celery Worker - Consumer Queue (consumers queue)
   # ============================================
   celery-consumer:
     build:
@@ -326,21 +412,56 @@ services:
     depends_on:
       - django
       - redis
-      - kafka
+      - kafka-1
+      - kafka-2
+      - kafka-3
     environment:
       - DJANGO_SETTINGS_MODULE=jovoclient.settings
+      - HOSTNAME=celery-consumer
+      # Redis connection settings to prevent idle timeouts
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      # Visibility timeout must be longer than longest task (12 hours default)
+      - CELERY_VISIBILITY_TIMEOUT=43200
+      - CELERY_SOCKET_TIMEOUT=120
+      - CELERY_SOCKET_CONNECT_TIMEOUT=30
+      - CELERY_HEALTH_CHECK_INTERVAL=30
+      # Task time limits
+      - CELERY_TASK_TIME_LIMIT=7200
+      - CELERY_TASK_SOFT_TIME_LIMIT=6900
+      # Worker settings
+      - CELERY_WORKER_PREFETCH_MULTIPLIER=1
+      - CELERY_WORKER_MAX_TASKS_PER_CHILD=1000
+      - CELERY_TASK_ACKS_LATE=True
+      - CELERY_TASK_REJECT_ON_WORKER_LOST=True
     env_file:
       - ../.env.docker
     volumes:
       - ..:/app
     networks:
       - replication-network
-    command: celery -A jovoclient worker -Q consumers -l info -n consumer@%h 
-      --concurrency=4 
-      --max-tasks-per-child=1000
-      --time-limit=7200
-      --prefetch-multiplier=1
-      --soft-time-limit=3300
+    command:
+      - celery
+      - -A
+      - jovoclient
+      - worker
+      - -Q
+      - consumers
+      - -l
+      - info
+      - -n
+      - consumer@%h
+      - --concurrency=4
+      - --max-tasks-per-child=1000
+      - --prefetch-multiplier=1
+      - --time-limit=7200
+      - --soft-time-limit=6900
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A jovoclient inspect ping -d consumer@celery-consumer || exit 1"]
+      interval: 60s
+      timeout: 30s
+      retries: 3
+      start_period: 30s
     restart: unless-stopped
 
   # ============================================
@@ -371,14 +492,23 @@ volumes:
     driver: local
   redis-data:
     driver: local
-  kafka-data:
+  kafka1-data:
+    driver: local
+  kafka2-data:
+    driver: local
+  kafka3-data:
     driver: local
   django-static:
     driver: local
   django-media:
+    driver: local
+  celery-beat-schedule:
     driver: local
 
 networks:
   replication-network:
     driver: bridge
     name: replication-network
+
+  
+
